# threshold-forecast-illusion

./: .gitignore  LICENSE  README.md  _handoff-research.md  architecture.md  conftest.py  implementation_plan.md  pyproject.toml
docs/: project-workflow.md
notebooks/: 01_explore_raw_data.ipynb  02_unify_extracts.ipynb  03_feature_engineering.ipynb  04_demand_model.ipynb  05_breach_model.ipynb  06_waiting_time_model.ipynb  07_gold_star_schema.ipynb
src/hcip/: __init__.py  gold.py  modeling.py
src/tfi/: synthetic.py
tests/: test_calibration_slices.py  test_data_validation.py  test_models.py  test_synthetic.py
