[project]
name = "tfi"
version = "0.1.0"
description = "Research repository validating the Threshold Forecast Illusion theorem via AR(1) simulations and empirical replications."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Farhaan Qazi" }]

dependencies = [
    "pandas>=3.0",
    "pyarrow>=24.0",
    "numpy>=2.4",
    "scikit-learn>=1.9",
    "scipy>=1.17",
    "xgboost>=3.2",
    "lightgbm>=4.6",
    "statsmodels>=0.14",
    "matplotlib>=3.10",
    "sqlalchemy>=2.0",
    "pandera>=0.31",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.5",
    "ipykernel>=7.2",
    "notebook>=7.5",
]
dev = [
    "pytest>=9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tfi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
